@@ -7,6 +7,7 @@ o New -labels-progress option to improve page labels interface
 o New options -output-json et al. to export PDF files in JSON format
 o New option -stamp-as-xobject to add one PDF as an xobject in another
 o No longer depends on Bigarray or Unix modules
+o Appearance streams transformed when transforming annotations
 
 Version 2.3 (patchlevel 1, December 2019)
 
